--- a/GenericDropdown.razor
+++ b/GenericDropdown.razor
@@ -1,6 +1,6 @@
 @typeparam T
 
-<select TValue="T" >
+<select TValue="T" @attributes="AdditionalAttributes">
 	@foreach (T o in Options)
 	{
 		<option value="@o" onclick="@(() => Change(o))">	<!-- binding to select causes all sorts of weird behaviours, so we use this workaround. -->
@@ -16,6 +16,8 @@
 	public IEnumerable<T> Options { get; set; } 
 	[Parameter]
 	public EventCallback<T> SelectedOptionChanged { get; set; }
+	[Parameter(CaptureUnmatchedValues = true)]
+	public IDictionary<string, object>? AdditionalAttributes { get; set; }
 
 	protected override void OnInitialized()
 	{
